@@ -1,20 +1,25 @@
 package larex.geometry;
 
 import java.util.ArrayList;
+import java.util.Collection;
+import java.util.List;
+import java.util.stream.Collectors;
 
 import org.opencv.core.Mat;
+import org.opencv.core.MatOfPoint;
 import org.opencv.core.Point;
 import org.opencv.core.Scalar;
 import org.opencv.imgproc.Imgproc;
 
+import larex.data.MemoryCleaner;
 import larex.geometry.regions.RegionSegment;
 
 public class ExistingGeometry {
 
-	private ArrayList<RegionSegment> fixedRegionSegments;
-	private ArrayList<PointList> cuts;
+	private Collection<RegionSegment> fixedRegionSegments;
+	private Collection<PointList> cuts;
 
-	public ExistingGeometry(ArrayList<RegionSegment> fixedRegionSegments, ArrayList<PointList> cuts) {
+	public ExistingGeometry(Collection<RegionSegment> fixedRegionSegments, Collection<PointList> cuts) {
 		this.fixedRegionSegments = fixedRegionSegments;
 		this.cuts = cuts;
 	}
@@ -26,18 +31,17 @@ public class ExistingGeometry {
 	 * @param scaleFactor Scale factor of the image
 	 * @return Clone of the image with drawn in geometry
 	 */
-	public Mat drawIntoImage(Mat image, double scaleFactor) {
-		Mat result = image.clone();
+	public Mat drawIntoImage(final Mat image, double scaleFactor) {
+		final Mat result = image.clone();
 
 		// Resize
-		ArrayList<ArrayList<Point>> ocvPointLists = new ArrayList<ArrayList<Point>>();
-		for (RegionSegment pointList : fixedRegionSegments)
-			ocvPointLists.add(new ArrayList<>(pointList.getResizedPoints(scaleFactor).toList()));
-		for (PointList cut : cuts)
-			ocvPointLists.add(new ArrayList<>(cut.getResizedPoints(scaleFactor).toList()));
+		final List<MatOfPoint> contours = fixedRegionSegments.stream().map(s -> s.getResizedPoints(scaleFactor))
+											.collect(Collectors.toList());
+		Imgproc.drawContours(result, contours, -1, new Scalar(0), -1);
+		MemoryCleaner.clean(contours);
 
-		// Convert and draw
-		for (ArrayList<Point> ocvPoints : ocvPointLists) {
+		for (PointList cut : cuts) {
+			ArrayList<Point> ocvPoints = new ArrayList<>(cut.getResizedPoints(scaleFactor).toList());
 			if (ocvPoints != null && ocvPoints.size() > 1) {
 				Point lastPoint = ocvPoints.get(0);
 
@@ -52,11 +56,11 @@ public class ExistingGeometry {
 		return result;
 	}
 
-	public ArrayList<RegionSegment> getFixedRegionSegments() {
+	public Collection<RegionSegment> getFixedRegionSegments() {
 		return fixedRegionSegments;
 	}
 
-	public ArrayList<PointList> getCuts() {
+	public Collection<PointList> getCuts() {
 		return cuts;
 	}
 }
